# multiwindow-pattern-demo

./: LICENSE  README.md  main.cpp  meson.build  snapwindows.cpp  snapwindows.h  toolbarwindow.cpp  toolbarwindow.h  utils.cpp  utils.h
graphics/demo/: float-on-top.avif  initial-layout.avif  layout-profiles.avif  snap-attach.avif  window-at-cursor.avif
